--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.13.0",
     "remark-gfm": "^4.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
