--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.5.0",
+    "lucide-react": "^0.479.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
@@ -26,6 +27,7 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.13.0",
     "remark-gfm": "^4.0.0",
+    "swiper": "^11.2.5",
     "web-vitals": "^2.1.4",
     "ws": "^8.18.1"
   },
