--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "^9.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.13.0",
     "remark-gfm": "^4.0.0",
